Fixed scrolling animation on small monitors.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13113,6 +13113,7 @@ textarea.form-control-lg {
 
 body {
     font-family: "Roboto Light", Helvetica, Arial, sans-serif;
+    scroll-behavior: smooth;
 }
 
 [data-bs-theme=dark] {
@@ -13135,6 +13136,10 @@ body {
     margin-left: 0;
 }
 
+section {
+    scroll-margin-top: 80px;
+}
+
 @media (min-width: 992px) {
     .sidebar {
     position: fixed;
@@ -13154,8 +13159,11 @@ body {
     min-height: 100vh;
         padding-top: 0;
     }
-}
 
+    section {
+        scroll-margin-top: 0;
+    }
+}
 .secondary-bg {
     background-color: var(--bs-sidebar-bg);
 }
